# CPU-Emulation

./: .gitignore  CMakeLists.txt  FSM.xlsx  README.md  alu.cpp  alu.hpp  arithmetics.cpp  arithmetics.hpp  cmake_build_run.ps1  compile_optimize_tests.ps1  compile_tests.ps1  components.cpp  components.hpp  controller.cpp  controller.hpp  decoder.cpp  decoder.hpp  gates.cpp  gates.hpp  generate_tasks.py  main.cpp  mem.cpp  mem.hpp  mux.cpp  mux.hpp  processor.cpp  processor.hpp  progressbar.hpp  ram.cpp  ram.hpp  rom.cpp  rom.hpp  rom.txt  signals.cpp  signals.hpp  stats.cpp  stats.hpp  switches.cpp  switches.hpp  tests.cpp
